<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/spacing_24dp"
    android:paddingTop="@dimen/spacing_16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/spacing_32dp"
        android:layout_height="@dimen/spacing_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black" />

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12dp"
        android:fontFamily="@font/roboto_bold"
        android:lineHeight="@dimen/spacing_19dp"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toTopOf="@+id/iv_image"
        tools:targetApi="p"
        tools:text="@string/txt_dummy_repository" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:lineHeight="@dimen/text_size_21sp"
        android:maxLines="3"
        android:textColor="@color/dove_gray"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository"
        tools:targetApi="p"
        tools:text="@string/txt_dummy_bio" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_repository_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/dove_gray"
            android:textSize="@dimen/text_size_10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_star" />

        <TextView
            android:id="@+id/tv_updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16dp"
            android:maxLines="1"
            android:textColor="@color/dove_gray"
            android:textSize="@dimen/text_size_10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_star"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_updated_at" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line_content"
        style="@style/Divider.WildSand"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_repository_info" />
</androidx.constraintlayout.widget.ConstraintLayout>