<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/spacing_24dp"
    android:paddingTop="@dimen/spacing_24dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/spacing_64dp"
        android:layout_height="@dimen/spacing_64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toTopOf="@id/iv_image">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_name" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/txt_dummy_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:lineHeight="@dimen/text_size_21sp"
        android:maxLines="3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/cl_profile"
        tools:targetApi="p"
        tools:text="@string/txt_dummy_bio" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_follow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio">

        <ImageView
            android:id="@+id/iv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_followers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="0.05"
            android:textColor="@color/mine_shaft"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_followers"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_followers" />

        <ImageView
            android:id="@+id/iv_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:src="@drawable/ic_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_followers"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="0.05"
            android:textColor="@color/mine_shaft"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_dot"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_following" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/cl_follow">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:textColor="@color/mine_shaft"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_location"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_location" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/cl_location">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:textColor="@color/mine_shaft"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_email"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_dummy_location" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line_content"
        style="@style/Divider.WildSand"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_email" />
</androidx.constraintlayout.widget.ConstraintLayout>